--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .escola{
-    background-image: linear-gradient(#e6b0ff,#d49bfa);
+    background-image: linear-gradient(#3b0057,#d49bfa);
     color:rgb(0, 0, 0);
     display: flex;
     justify-content: center;
