--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #5d3385;
+    background-color: #945cc9;
     color: rgb(0, 0, 0);
     display: flex;
     justify-content: space-around;
@@ -29,7 +29,7 @@ body {
 }
 
 .escola{
-    background-image: linear-gradient(#3b0057,#d49bfa);
+    background-image: linear-gradient(#3b0057,#d49bfae8);
     color:rgb(0, 0, 0);
     display: flex;
     justify-content: center;
