--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 }
 
 .escola{
-    background-image: linear-gradient(#3b0057,#d49bfae8);
+    background-image: linear-gradient(#6e0c9b,#d49bfae8);
     color:rgb(0, 0, 0);
     display: flex;
     justify-content: center;
