--- a/style.css
+++ b/style.css
@@ -29,8 +29,8 @@ body {
 }
 
 .escola{
-    background-image: linear-gradient(#6e0c9b,#d49bfae8);
-    color:rgb(0, 0, 0);
+    background-image: linear-gradient(#000000,#d49bfae8);
+    color:rgb(255, 255, 255);
     display: flex;
     justify-content: center;
     align-items: center;
