--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #945cc9;
-    color: rgb(0, 0, 0);
+    background-color: #000000;
+    color: rgb(230, 147, 255);
     display: flex;
     justify-content: space-around;
     align-items: center;
