--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     font-family: 'Poppins', sans-serif;
 }
 .cabecalho {
-    background-color: #000000;
+    background-color: #bc7be2;
     color: rgb(230, 147, 255);
     display: flex;
     justify-content: space-around;
@@ -30,7 +30,7 @@ body {
 
 .escola{
     background-image: linear-gradient(#000000,#d49bfae8);
-    color:rgb(255, 255, 255);
+    color:rgb(209, 152, 231);
     display: flex;
     justify-content: center;
     align-items: center;
