--- a/style.css
+++ b/style.css
@@ -38,12 +38,12 @@ body {
 }
 
 .escola-div-conteudo{
-    width: 35ch;
+    width: 35px;
 }
 
 
 .escola-titulo{
-    padding: 60ch 0;
+    padding: 20px 0;
 }
 
 .estudante{
