--- a/style.css
+++ b/style.css
@@ -43,14 +43,14 @@ body {
 
 
 .escola-titulo{
-    padding: 20px 0;
+    padding: 20% 0;
 }
 
 .estudante{
-    padding: 40px 0;
+    padding: 3% 0;
 }
 .estudante-imagem{
-    width: 140px;
+    width: 130px;
 }
 
 .estudante-icone{
