--- a/style.css
+++ b/style.css
@@ -34,11 +34,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 24px 0;
+    padding: 24% 0;
 }
 
 .escola-div-conteudo{
-    width: 35px;
+    width: 35%;
 }
 
 
